# sync-kobo

./: .codespell_dict.txt  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.utils/: render_readme.py
sync_kobo/: __init__.py  cli.py  db.py  fzf_select.py  main.py  utils.py
