[tool.poetry]
name = "sync-kobo"
version = "0.1.0"
description = "Small script to sync book collection with kobo e-reader."
authors = ["David Fischer <d.fischer.git@posteo.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/david-fischer/sync-kobo"
include = ["imgs/*"]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
click = "^7.1.2"
pyfzf = "^0.2.2"
SQLAlchemy = "^1.3.20"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
Jinja2 = "^2.11.2"
pylint = "^2.6.0"
black = "^20.8b1"
pre-commit = "^2.9.2"

[tool.poetry.scripts]
sync-kobo = "sync_kobo.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
